--- a/my_site.html
+++ b/my_site.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Hello, World!</h1>
+    
+    <!-- Example of an XSS payload -->
+    <script>alert('1');</script>
 </body>
 </html>
