--- a/my_site.html
+++ b/my_site.html
@@ -9,6 +9,6 @@
     <h1>Hello, World!</h1>
     
     <!-- Example of an XSS payload -->
-    <script>alert('1');</script>
+    <script>alert('1')</script>
 </body>
 </html>
